[metadata]
name = pycomplex
version = 0.0.1
author = Sebastian David Less
author_email = sebastian@incerto.net
description = A library for complexity science and complex systems research
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sebs-code/pycomplex
project_urls =
    Bug Tracker = https://github.com/sebs-code/pycomplex/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
